[package]
name = "rust-firmware-common"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
getset = "0.1"
log = { version = "0.4.21", features = [] }
pretty_env_logger = "0.5.0"
serde_json = "1.0.121"
serde = { version = "1.0.203", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
